Add initial implementation of the cart page with product listings and totals

--- a/aboutdetail.html
+++ b/aboutdetail.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<link rel="icon" type="image/png" href="images/CAFÉ_SAFI_icon.png">
 <head>
-    <title>Coffee - Free Bootstrap 4 Template by Colorlib</title>
+    <title>Coffee - Free Bootstrap 4 Template </title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -47,19 +47,19 @@
                     <li class="nav-item active"><a href="about.html" class="nav-link">About</a></li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="room.html" id="dropdown04" data-toggle="dropdown"
-                            aria-haspopup="true" aria-expanded="false">Shop</a>
+                            aria-haspopup="true" aria-expanded="false">Info</a>
                         <div class="dropdown-menu" aria-labelledby="dropdown04">
-                            <a class="dropdown-item" href="info.html">info</a>
-                            <a class="dropdown-item" href="product-single.html">Single Product</a>
-                            <a class="dropdown-item" href="room.html">Cart</a>
-                            <a class="dropdown-item" href="checkout.html">Checkout</a>
+                            <a class="dropdown-item" href="cult.html">Cultivation</a>
+                            <!-- <a class="dropdown-item" href="product-single.html">Single Product</a> -->
+                            <a class="dropdown-item" href="manu.html">Manufacturing</a>
+                            <!-- <a class="dropdown-item" href="checkout.html">Checkout</a> -->
                         </div>
                     </li>
                     <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
-                    <li class="nav-item cart"><a href="cart.html" class="nav-link"><span
+                    <!-- <li class="nav-item cart"><a href="cart.html" class="nav-link"><span
                                 class="icon icon-shopping_cart"></span><span
                                 class="bag d-flex justify-content-center align-items-center"><small>1</small></span></a>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
         </div>
@@ -193,17 +193,17 @@
                         </div> -->
                     </div>
                 </div>
-               <div class="col-lg-2 col-md-6 mb-5 mb-md-5">
-					<div class="ftco-footer-widget mb-4 ml-md-4">
-						<h2 class="ftco-heading-2">Services</h2>
-						<ul class="list-unstyled">
-							<li><a href="#" class="py-2 d-block">Growing Coffe Beans</a></li>
-							<li><a href="#" class="py-2 d-block">Coffer beans Manufacturing</a></li>
-							<li><a href="#" class="py-2 d-block">Coffee beans distribution</a></li>
-							<li><a href="#" class="py-2 d-block">Coffe Shops</a></li>
-						</ul>
-					</div>
-				</div>
+                <div class="col-lg-2 col-md-6 mb-5 mb-md-5">
+                    <div class="ftco-footer-widget mb-4 ml-md-4">
+                        <h2 class="ftco-heading-2">Services</h2>
+                        <ul class="list-unstyled">
+                            <li><a href="#" class="py-2 d-block">Growing Coffe Beans</a></li>
+                            <li><a href="#" class="py-2 d-block">Coffer beans Manufacturing</a></li>
+                            <li><a href="#" class="py-2 d-block">Coffee beans distribution</a></li>
+                            <li><a href="#" class="py-2 d-block">Coffe Shops</a></li>
+                        </ul>
+                    </div>
+                </div>
                 <div class="col-lg-3 col-md-6 mb-5 mb-md-5">
                     <div class="ftco-footer-widget mb-4">
                         <h2 class="ftco-heading-2">Have a Questions?</h2>
@@ -211,8 +211,8 @@
                             <ul>
                                 <li><span class="icon icon-map-marker"></span><span class="text">Nos adresses : 115,
                                         Avenue Colonel Ebeya au croisement des Avenues du Marché.
-                                    </span></li> 
-                                    <li><span class="icon icon-map-marker"></span><span class="text">
+                                    </span></li>
+                                <li><span class="icon icon-map-marker"></span><span class="text">
                                         51, Avenue Batetela au croisement du boulevard du 30 juin.
                                     </span></li>
                                 <li><a href="#"><span class="icon icon-phone"></span><span class="text">+243 977068929
@@ -230,9 +230,7 @@
                     <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                         Copyright &copy;
                         <script>document.write(new Date().getFullYear());</script> All rights reserved | This template
-                        is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com"
-                            target="_blank">Colorlib</a>
-                        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                        is made with <i class="icon-heart" aria-hidden="true"></i>
                     </p>
                 </div>
             </div>
