--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<link rel="icon" type="image/png" href="images/CAFÉ_SAFI_icon.png">
 <head>
 	<title>Café SAFI PETIT KWILU </title>
 	<meta charset="utf-8">
@@ -47,11 +47,11 @@
 					<li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
 					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle" href="room.html" id="dropdown04" data-toggle="dropdown"
-							aria-haspopup="true" aria-expanded="false">Shop</a>
+							aria-haspopup="true" aria-expanded="false">Info</a>
 						<div class="dropdown-menu" aria-labelledby="dropdown04">
-							<a class="dropdown-item" href="info.html">info</a>
+							<a class="dropdown-item" href="cult.html">Cultivation</a>
 							<!-- <a class="dropdown-item" href="product-single.html">Single Product</a> -->
-							<a class="dropdown-item" href="room.html">Cart</a>
+							<a class="dropdown-item" href="manu.html">Manufacturing</a>
 							<!-- <a class="dropdown-item" href="checkout.html">Checkout</a> -->
 						</div>
 					</li>
@@ -84,7 +84,7 @@
 						<h1 class="mb-4">Café SAFI PETIT KWILU </h1>
 						<p class="mb-4 mb-md-5">Where Every Cup Tells a Story! ☕.</p>
 						<p class="mb-4 mb-md-5">Hey there, coffee lovers! I’m Régine, the proud owner and chief caffeine
-							enthusiast behind this cozy corner. At [Coffee Shop Name], we’re all about crafting the
+							enthusiast behind this cozy corner. At Café SAFI, we’re all about crafting the
 							perfect brew, serving good vibes, and creating a space where every sip feels like home..</p>
 						<!-- <p><a href="#" class="btn btn-primary p-3 px-xl-4 py-xl-3">Order Now</a> <a href="#" class="btn btn-white btn-outline-white p-3 px-xl-4 py-xl-3">View Menu</a></p> -->
 					</div>
@@ -214,7 +214,8 @@
 					<h2 class="mb-4">Our Story</h2>
 				</div>
 				<div>
-					<p style="color: white;">SAFIA GROUP is an innovative agricultural company specializing in the coffee sector, promoting
+					<p style="color: white;">SAFIA GROUP is an innovative agricultural company specializing in the
+						coffee sector, promoting
 						the unique variety of PETIT KWILU, grown exclusively in Kongo Central in the DRC, founded in
 						2020 by Regine Tika Shungu..</p>
 				</div>
@@ -376,7 +377,7 @@
 						<div class="text text-center pt-4">
 							<h3><a href="#">Coffee</a></h3>
 							<!-- <p>A small river named Duden flows by their place and supplies</p> -->
-							<p class="price"><span>5.90 FC</span></p>
+							<p class="price"><span>5000 FC</span></p>
 							<!-- <p><a href="#" class="btn btn-primary btn-outline-primary">Add to Cart</a></p> -->
 						</div>
 					</div>
@@ -387,7 +388,7 @@
 						<div class="text text-center pt-4">
 							<h3><a href="#">Café au lait</a></h3>
 							<!-- <p>A small river named Duden flows by their place and supplies</p> -->
-							<p class="price"><span>3.000 FC</span></p>
+							<p class="price"><span>3000 FC</span></p>
 							<!-- <p><a href="#" class="btn btn-primary btn-outline-primary">Add to Cart</a></p> -->
 						</div>
 					</div>
@@ -398,7 +399,7 @@
 						<div class="text text-center pt-4">
 							<h3><a href="#">EXPRESO</a></h3>
 							<!-- <p>A small river named Duden flows by their place and supplies</p> -->
-							<p class="price"><span>5.000 FC</span></p>
+							<p class="price"><span>5000 FC</span></p>
 							<!-- <p><a href="#" class="btn btn-primary btn-outline-primary">Add to Cart</a></p> -->
 						</div>
 					</div>
@@ -409,7 +410,7 @@
 						<div class="text text-center pt-4">
 							<h3><a href="#">MOCHA</a></h3>
 							<!-- <p>A small river named Duden flows by their place and supplies</p> -->
-							<p class="price"><span>8.000 FC </span></p>
+							<p class="price"><span>8000 FC </span></p>
 							<!-- <p><a href="#" class="btn btn-primary btn-outline-primary">Add to Cart</a></p> -->
 						</div>
 					</div>
@@ -858,8 +859,7 @@
 					<p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 						Copyright &copy;
 						<script>document.write(new Date().getFullYear());</script> All rights reserved | <i
-							class="></i> by <a href=" target="_blank">FREELANCE SOLUTIONS</a>
-							<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+							class=""></i> by <a href="target=" _blank>FREELANCE SOLUTIONS</a>
 					</p>
 				</div>
 			</div>
