--- a/services.html
+++ b/services.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<link rel="icon" type="image/png" href="images/CAFÉ_SAFI_icon.png">
 <html lang="en">
 
 <head>
@@ -46,15 +47,15 @@
           <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
           <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="room.html" id="dropdown04" data-toggle="dropdown"
-              aria-haspopup="true" aria-expanded="false">Shop</a>
-            <div class="dropdown-menu" aria-labelledby="dropdown04">
-              <a class="dropdown-item" href="info.html">info</a>
-              <a class="dropdown-item" href="product-single.html">Single Product</a>
-              <a class="dropdown-item" href="cart.html">Cart</a>
-              <a class="dropdown-item" href="checkout.html">Checkout</a>
-            </div>
-          </li>
+						<a class="nav-link dropdown-toggle" href="room.html" id="dropdown04" data-toggle="dropdown"
+							aria-haspopup="true" aria-expanded="false">Info</a>
+						<div class="dropdown-menu" aria-labelledby="dropdown04">
+							<a class="dropdown-item" href="cult.html">Cultivation</a>
+							<!-- <a class="dropdown-item" href="product-single.html">Single Product</a> -->
+							<a class="dropdown-item" href="manu.html">Manufacturing</a>
+							<!-- <a class="dropdown-item" href="checkout.html">Checkout</a> -->
+						</div>
+					</li>
           <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
           <!-- <li class="nav-item cart"><a href="cart.html" class="nav-link"><span class="icon icon-shopping_cart"></span><span class="bag d-flex justify-content-center align-items-center"><small>1</small></span></a></li> -->
         </ul>
@@ -111,10 +112,10 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4 ftco-animate">
+         <div class="col-md-4 ftco-animate">
           <div class="media d-block text-center block-6 services">
             <div class="icon d-flex justify-content-center align-items-center mb-5">
-              <span class="flaticon-coffee"></span>
+              <span class="flaticon-coffee-bean"></span>
             </div>
             <div class="media-body">
               <h3 class="heading">Premium Packaging & Gifts</h3>
@@ -215,11 +216,10 @@
       <div class="row">
         <div class="col-md-12 text-center">
 
-          <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+          <p><!-- Link back to FREELANCE SOLUTION can't be removed. Template is licensed under CC BY 3.0. -->
             Copyright &copy;
             <script>document.write(new Date().getFullYear());</script> All rights reserved |FREELANCE SOLUTIONS <i
-              class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+              class="icon-heart" aria-hidden="true"></i>
           </p>
         </div>
       </div>
