--- a/about.html
+++ b/about.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<link rel="icon" type="image/png" href="images/CAFÉ_SAFI_icon.png">
 <head>
-	<title>Coffee - Free Bootstrap 4 Template by Colorlib</title>
+	<title>Coffee - Free Bootstrap 4 Template </title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -47,19 +47,19 @@
 					<li class="nav-item active"><a href="about.html" class="nav-link">About</a></li>
 					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle" href="room.html" id="dropdown04" data-toggle="dropdown"
-							aria-haspopup="true" aria-expanded="false">Shop</a>
+							aria-haspopup="true" aria-expanded="false">Info</a>
 						<div class="dropdown-menu" aria-labelledby="dropdown04">
-							<a class="dropdown-item" href="info.html">info</a>
-							<a class="dropdown-item" href="product-single.html">Single Product</a>
-							<a class="dropdown-item" href="room.html">Cart</a>
-							<a class="dropdown-item" href="checkout.html">Checkout</a>
+							<a class="dropdown-item" href="cult.html">Cultivation</a>
+							<!-- <a class="dropdown-item" href="product-single.html">Single Product</a> -->
+							<a class="dropdown-item" href="manu.html">Manufacturing</a>
+							<!-- <a class="dropdown-item" href="checkout.html">Checkout</a> -->
 						</div>
 					</li>
 					<li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
-					<li class="nav-item cart"><a href="cart.html" class="nav-link"><span
+					<!-- <li class="nav-item cart"><a href="cart.html" class="nav-link"><span
 								class="icon icon-shopping_cart"></span><span
 								class="bag d-flex justify-content-center align-items-center"><small>1</small></span></a>
-					</li>
+					</li> -->
 				</ul>
 			</div>
 		</div>
@@ -140,46 +140,48 @@
 		</div>
 	</section>
 
-	 <section class="ftco-section">
-    	<div class="container">
-    		<div class="row align-items-center">
-    			<div class="col-md-6 pr-md-5">
-    				<div class="heading-section text-md-right ftco-animate">
-	          	<span class="subheading">Discover</span>
-	            <h2 class="mb-4">Our Menu</h2>
-	            <p class="mb-4">From bold espresso to velvety lattes, our menu spans the spectrum of coffee cravings.
-					Cold brew, flavored sips, or classic black—we’ve got your perfect match.
-					Endless choices, one mission: your ideal cup.</p>
-	            <p><a href="menu.html" class="btn btn-primary btn-outline-primary px-4 py-3">View Full Menu</a></p>
-	          </div>
-    			</div>
-    			<div class="col-md-6">
-    				<div class="row">
-    					<div class="col-md-6">
-    						<div class="menu-entry">
-		    					<a href="#" class="img" style="background-image: url(images/CUPA.jpeg);"></a>
-		    				</div>
-    					</div>
-    					<div class="col-md-6">
-    						<div class="menu-entry mt-lg-4">
-		    					<a href="#" class="img" style="background-image: url(images/2CUPA.jpeg);"></a>
-		    				</div>
-    					</div>
-    					<div class="col-md-6">
-    						<div class="menu-entry">
-		    					<a href="#" class="img" style="background-image: url(images/MOCAA.jpeg);"></a>
-		    				</div>
-    					</div>
-    					<div class="col-md-6">
-    						<div class="menu-entry mt-lg-4">
-		    					<a href="#" class="img" style="background-image: url(images/menu-4.jpg);"></a>
-		    				</div>
-    					</div>
-    				</div>
-    			</div>
-    		</div>
-    	</div>
-    </section>
+	<section class="ftco-section">
+		<div class="container">
+			<div class="row align-items-center">
+				<div class="col-md-6 pr-md-5">
+					<div class="heading-section text-md-right ftco-animate">
+						<span class="subheading">Discover</span>
+						<h2 class="mb-4">Our Menu</h2>
+						<p class="mb-4">From bold espresso to velvety lattes, our menu spans the spectrum of coffee
+							cravings.
+							Cold brew, flavored sips, or classic black—we’ve got your perfect match.
+							Endless choices, one mission: your ideal cup.</p>
+						<p><a href="menu.html" class="btn btn-primary btn-outline-primary px-4 py-3">View Full Menu</a>
+						</p>
+					</div>
+				</div>
+				<div class="col-md-6">
+					<div class="row">
+						<div class="col-md-6">
+							<div class="menu-entry">
+								<a href="#" class="img" style="background-image: url(images/CUPA.jpeg);"></a>
+							</div>
+						</div>
+						<div class="col-md-6">
+							<div class="menu-entry mt-lg-4">
+								<a href="#" class="img" style="background-image: url(images/2CUPA.jpeg);"></a>
+							</div>
+						</div>
+						<div class="col-md-6">
+							<div class="menu-entry">
+								<a href="#" class="img" style="background-image: url(images/MOCAA.jpeg);"></a>
+							</div>
+						</div>
+						<div class="col-md-6">
+							<div class="menu-entry mt-lg-4">
+								<a href="#" class="img" style="background-image: url(images/menu-4.jpg);"></a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 
 	<section class="ftco-counter ftco-bg-dark img" id="section-counter" style="background-image: url(images/bg_2.jpg);"
 		data-stellar-background-ratio="0.5">
@@ -318,8 +320,8 @@
 
 					<p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 						Copyright &copy;
-						<script>document.write(new Date().getFullYear());</script> All rights reserved | FREELANCE SOLUTIONS <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com"
-							target="_blank">Colorlib</a>
+						<script>document.write(new Date().getFullYear());</script> All rights reserved | FREELANCE
+						SOLUTIONS <i class="icon-heart" aria-hidden="true"></i>
 						<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 					</p>
 				</div>
