--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
+<link rel="icon" type="image/png" href="images/CAFÉ_SAFI_icon.png">
 <html lang="en">
   <head>
-    <title>Coffee - Free Bootstrap 4 Template by Colorlib</title>
+    <title>Coffee - Free Bootstrap 4 Template </title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -42,17 +43,18 @@
 	          <li class="nav-item"><a href="services.html" class="nav-link">Services</a></li>
 	          <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
 	          <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-	          <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="room.html" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Shop</a>
-              <div class="dropdown-menu" aria-labelledby="dropdown04">
-              	<a class="dropdown-item" href="info.html">info</a>
-                <a class="dropdown-item" href="product-single.html">Single Product</a>
-                <a class="dropdown-item" href="room.html">Cart</a>
-                <a class="dropdown-item" href="checkout.html">Checkout</a>
-              </div>
-            </li>
+	         <li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="room.html" id="dropdown04" data-toggle="dropdown"
+							aria-haspopup="true" aria-expanded="false">Info</a>
+						<div class="dropdown-menu" aria-labelledby="dropdown04">
+							<a class="dropdown-item" href="cult.html">Cultivation</a>
+							<!-- <a class="dropdown-item" href="product-single.html">Single Product</a> -->
+							<a class="dropdown-item" href="manu.html">Manufacturing</a>
+							<!-- <a class="dropdown-item" href="checkout.html">Checkout</a> -->
+						</div>
+					</li>
 	          <li class="nav-item active"><a href="contact.html" class="nav-link">Contact</a></li>
-	          <li class="nav-item cart"><a href="cart.html" class="nav-link"><span class="icon icon-shopping_cart"></span><span class="bag d-flex justify-content-center align-items-center"><small>1</small></span></a></li>
+	          <!-- <li class="nav-item cart"><a href="cart.html" class="nav-link"><span class="icon icon-shopping_cart"></span><span class="bag d-flex justify-content-center align-items-center"><small>1</small></span></a></li> -->
 	        </ul>
 	      </div>
 		  </div>
@@ -247,10 +249,7 @@
 
 					<p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 						Copyright &copy;
-						<script>document.write(new Date().getFullYear());</script> All rights reserved | This template
-						is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com"
-							target="_blank">Colorlib</a>
-						<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+						<script>document.write(new Date().getFullYear());</script> All rights reserved | FREELANCE SOLUTIONS <i class="icon-heart" aria-hidden="true"></i> 
 					</p>
 				</div>
 			</div>
