--- a/menu.html
+++ b/menu.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<link rel="icon" type="image/png" href="images/CAFÉ_SAFI_icon.png">
 <html lang="en">
 
 <head>
@@ -60,19 +61,19 @@
                         <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="room.html" id="dropdown04" data-toggle="dropdown"
-                                aria-haspopup="true" aria-expanded="false">Shop</a>
+                                aria-haspopup="true" aria-expanded="false">Info</a>
                             <div class="dropdown-menu" aria-labelledby="dropdown04">
-                                <a class="dropdown-item" href="info.html">info</a>
-                                <a class="dropdown-item" href="product-single.html">Single Product</a>
-                                <a class="dropdown-item" href="room.html">Cart</a>
-                                <a class="dropdown-item" href="checkout.html">Checkout</a>
+                                <a class="dropdown-item" href="cult.html">Cultivation</a>
+                                <!-- <a class="dropdown-item" href="product-single.html">Single Product</a> -->
+                                <a class="dropdown-item" href="manu.html">Manufacturing</a>
+                                <!-- <a class="dropdown-item" href="checkout.html">Checkout</a> -->
                             </div>
                         </li>
                         <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
-                        <li class="nav-item cart"><a href="cart.html" class="nav-link"><span
+                        <!-- <li class="nav-item cart"><a href="cart.html" class="nav-link"><span
                                     class="icon icon-shopping_cart"></span><span
                                     class="bag d-flex justify-content-center align-items-center"><small>1</small></span></a>
-                        </li>
+                        </li> -->
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="langDropdown" data-toggle="dropdown"
                                 aria-haspopup="true" aria-expanded="false">
