--- a/menu2.html
+++ b/menu2.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
+<link rel="icon" type="image/png" href="images/CAFÉ_SAFI_icon.png">
 <html lang="en">
   <head>
-    <title>Coffee - Free Bootstrap 4 Template by Colorlib</title>
+    <title>Coffee - Free Bootstrap 4 Template </title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
