Implement language switcher functionality and translations for multi-language support across the website. Updated product-single and services pages to include language options and added necessary JavaScript files for handling translations. Enhanced navigation dropdown for language selection and ensured proper text translation for various elements.

--- a/blog.html
+++ b/blog.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <link rel="icon" type="image/png" href="images/CAFÉ_SAFI_icon.png">
+
 <head>
   <title>Coffee - Free Bootstrap 4 Template </title>
   <meta charset="utf-8">
@@ -296,7 +297,8 @@
         stroke="#F96D00" />
     </svg></div>
 
-
+  <script src="js/translations.js"></script>
+  <script src="js/language_switcher.js"></script>
   <script src="js/jquery.min.js"></script>
   <script src="js/jquery-migrate-3.0.1.min.js"></script>
   <script src="js/popper.min.js"></script>
