--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <link rel="icon" type="image/png" href="images/CAFÉ_SAFI_icon.png">
+
 <head>
 	<title>Café SAFI PETIT KWILU </title>
 	<meta charset="utf-8">
@@ -59,7 +60,7 @@
 					<!-- <li class="nav-item cart"><a href="cart.html" class="nav-link"><span class="icon icon-shopping_cart"></span><span class="bag d-flex justify-content-center align-items-center"><small>1</small></span></a></li> -->
 					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle" href="#" id="langDropdown" data-toggle="dropdown"
-							aria-haspopup="true" aria-expanded="false">
+							aria-haspopup="true" aria-expanded="false" data-translate-key="nav_language">
 							Language
 						</a>
 						<div class="dropdown-menu dropdown-menu-right" aria-labelledby="langDropdown">
@@ -875,7 +876,8 @@
 				stroke="#F96D00" />
 		</svg></div>
 
-
+	<script src="js/translations.js"></script>
+	<script src="js/language_switcher.js"></script>
 	<script src="js/jquery.min.js"></script>
 	<script src="js/jquery-migrate-3.0.1.min.js"></script>
 	<script src="js/popper.min.js"></script>
