--- a/about.html
+++ b/about.html
@@ -40,27 +40,37 @@
 			</button>
 			<div class="collapse navbar-collapse" id="ftco-nav">
 				<ul class="navbar-nav ml-auto">
-					<li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-					<li class="nav-item"><a href="menu.html" class="nav-link">Menu</a></li>
-					<li class="nav-item"><a href="services.html" class="nav-link">Services</a></li>
-					<li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
-					<li class="nav-item active"><a href="about.html" class="nav-link">About</a></li>
-					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="room.html" id="dropdown04" data-toggle="dropdown"
-							aria-haspopup="true" aria-expanded="false">Info</a>
-						<div class="dropdown-menu" aria-labelledby="dropdown04">
-							<a class="dropdown-item" href="cult.html">Cultivation</a>
-							<!-- <a class="dropdown-item" href="product-single.html">Single Product</a> -->
-							<a class="dropdown-item" href="manu.html">Manufacturing</a>
-							<!-- <a class="dropdown-item" href="checkout.html">Checkout</a> -->
-						</div>
-					</li>
-					<li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
-					<!-- <li class="nav-item cart"><a href="cart.html" class="nav-link"><span
+                    <li class="nav-item"><a href="index.html" class="nav-link" data-translate-key="nav_home">Home</a></li>
+                    <li class="nav-item"><a href="menu.html" class="nav-link" data-translate-key="nav_menu">Menu</a></li>
+                    <li class="nav-item"><a href="services.html" class="nav-link" data-translate-key="nav_services">Services</a></li>
+                    <li class="nav-item"><a href="blog.html" class="nav-link" data-translate-key="nav_blog">Blog</a></li>
+                    <li class="nav-item active"><a href="about.html" class="nav-link" data-translate-key="nav_about">About</a></li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="room.html" id="dropdown04" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false" data-translate-key="nav_info">Info</a>
+                        <div class="dropdown-menu" aria-labelledby="dropdown04">
+                            <a class="dropdown-item" href="cult.html" data-translate-key="nav_info_cultivation">Cultivation</a>
+                            <!-- <a class="dropdown-item" href="product-single.html">Single Product</a> -->
+                            <a class="dropdown-item" href="manu.html" data-translate-key="nav_info_manufacturing">Manufacturing</a>
+                            <!-- <a class="dropdown-item" href="checkout.html">Checkout</a> -->
+                        </div>
+                    </li>
+                    <li class="nav-item"><a href="contact.html" class="nav-link" data-translate-key="nav_contact">Contact</a></li>
+                    <!-- <li class="nav-item cart"><a href="cart.html" class="nav-link"><span
 								class="icon icon-shopping_cart"></span><span
 								class="bag d-flex justify-content-center align-items-center"><small>1</small></span></a>
 					</li> -->
-				</ul>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="langDropdown" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false" data-translate-key="nav_language">
+                            Language
+                        </a>
+                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="langDropdown">
+                            <a class="dropdown-item" href="?lang=en">English</a>
+                            <a class="dropdown-item" href="?lang=fr">Français</a>
+                        </div>
+                    </li>
+                </ul>
 			</div>
 		</div>
 	</nav>
@@ -74,10 +84,10 @@
 				<div class="row slider-text justify-content-center align-items-center">
 
 					<div class="col-md-7 col-sm-12 text-center ftco-animate">
-						<h1 class="mb-3 mt-5 bread">About Us</h1>
-						<p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home</a></span>
-							<span>About</span>
-						</p>
+                        <h1 class="mb-3 mt-5 bread" data-translate-key="about_title">About Us</h1>
+                        <p class="breadcrumbs"><span class="mr-2"><a href="index.html" data-translate-key="breadcrumb_home">Home</a></span>
+                            <span data-translate-key="breadcrumb_about">About</span>
+                        </p>
 					</div>
 
 				</div>
@@ -90,17 +100,17 @@
 		<div class="one-half ftco-animate">
 			<div class="overlap">
 				<div class="heading-section ftco-animate ">
-					<span class="subheading">Discover</span>
-					<h2 class="mb-4">Our Story</h2>
+					<span class="subheading" data-translate-key="about_our_story_subheading">Discover</span>
+					<h2 class="mb-4" data-translate-key="about_our_story_heading">Our Story</h2>
 				</div>
 				<div>
-					<p style="color: white;">SAFIA GROUP: Company Profile
+					<p style="color: white;" data-translate-key="about_our_story_text">SAFIA GROUP: Company Profile
 						SAFIA GROUP is an innovative agricultural company focused on the coffee sector. They specialize
 						in the PETIT KWILU, a coffee variety unique in the world, cultivated exclusively in Kongo
 						Central, DRC. Founded in 2020 by Regine Tika Shungu, SAFIA GROUP aims to promote Congolese
 						coffee, particularly the Petit Kwilu variety, and to position the Democratic Republic of Congo
 						as a major player in the international coffee market.</p>
-					<button class="btn btn-primary btn-outline-primary px-4 py-3 mt-3"><a href="aboutdetail.html">Read
+					<button class="btn btn-primary btn-outline-primary px-4 py-3 mt-3"><a href="aboutdetail.html" data-translate-key="about_read_more_button">Read
 							More</a></button>
 				</div>
 			</div>
