--- a/menu.html
+++ b/menu.html
@@ -308,7 +308,8 @@
             </footer>
         </div>
     </div>
-
+    <script src="js/translations.js"></script>
+    <script src="js/language_switcher.js"></script>
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/parallax.min.js"></script>
     <script src="js/jquery.singlePageNav.min.js"></script>
