--- a/services.html
+++ b/services.html
@@ -47,18 +47,22 @@
           <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
           <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
           <li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="room.html" id="dropdown04" data-toggle="dropdown"
-							aria-haspopup="true" aria-expanded="false">Info</a>
-						<div class="dropdown-menu" aria-labelledby="dropdown04">
-							<a class="dropdown-item" href="cult.html">Cultivation</a>
-							<!-- <a class="dropdown-item" href="product-single.html">Single Product</a> -->
-							<a class="dropdown-item" href="manu.html">Manufacturing</a>
-							<!-- <a class="dropdown-item" href="checkout.html">Checkout</a> -->
-						</div>
-					</li>
+            <a class="nav-link dropdown-toggle" href="room.html" id="dropdown04" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">Info</a>
+            <div class="dropdown-menu" aria-labelledby="dropdown04">
+              <a class="dropdown-item" href="cult.html">Cultivation</a>
+              <!-- <a class="dropdown-item" href="product-single.html">Single Product</a> -->
+              <a class="dropdown-item" href="manu.html">Manufacturing</a>
+              <!-- <a class="dropdown-item" href="checkout.html">Checkout</a> -->
+            </div>
+          </li>
           <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
           <!-- <li class="nav-item cart"><a href="cart.html" class="nav-link"><span class="icon icon-shopping_cart"></span><span class="bag d-flex justify-content-center align-items-center"><small>1</small></span></a></li> -->
         </ul>
+        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="langDropdown">
+          <a class="dropdown-item" href="?lang=en">English</a>
+          <a class="dropdown-item" href="?lang=fr">Français</a>
+        </div>
       </div>
     </div>
   </nav>
@@ -112,7 +116,7 @@
             </div>
           </div>
         </div>
-         <div class="col-md-4 ftco-animate">
+        <div class="col-md-4 ftco-animate">
           <div class="media d-block text-center block-6 services">
             <div class="icon d-flex justify-content-center align-items-center mb-5">
               <span class="flaticon-coffee-bean"></span>
@@ -236,7 +240,8 @@
         stroke="#F96D00" />
     </svg></div>
 
-
+  <script src="js/translations.js"></script>
+  <script src="js/language_switcher.js"></script>
   <script src="js/jquery.min.js"></script>
   <script src="js/jquery-migrate-3.0.1.min.js"></script>
   <script src="js/popper.min.js"></script>
