--- a/cult.html
+++ b/cult.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
 <head>
-	<title>Cultivation</title>
+	<title>Café SAFI PETIT KWILU </title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -75,7 +75,7 @@
 	<!-- END nav -->
 
 	<section class="home-slider owl-carousel">
-			<div class="slider-item" style="background-image: url(images/bg_3.jpg);" data-stellar-background-ratio="0.5">
+			<div class="slider-item" style="background-image: url(images/culti.jpeg);" data-stellar-background-ratio="0.5">
 				<div class="overlay"></div>
 				<div class="container">
 					<div class="row slider-text justify-content-center align-items-center">
@@ -131,7 +131,7 @@
 			<div class="container">
 				<div class="row justify-content-center mb-5 pb-3">
 					<div class="col-md-7 heading-section ftco-animate text-center">
-					<h2 class="mb-4">The Cultivation Process</h2>
+					<h2 class="mb-4" style="color: black;">The Cultivation Process</h2>
 					<p>Our meticulous cultivation process ensures the highest quality beans with distinctive flavor profiles.</p>
 				</div>
 			</div>
@@ -139,10 +139,10 @@
 				<div class="col-md-4 ftco-animate">
 					<div class="services-1 text-center">
 						<span class="icon">
-							<img src="images/coffee-flower.jpg" alt="Coffee Flowers" class="img-fluid rounded-circle mb-4" style="max-width: 150px;">
+							<img src="images/flowers.jpeg" alt="Coffee Flowers" class="img-fluid rounded-circle mb-4" style="max-width: 150px;">
 						</span>
 						<div class="desc">
-							<h3 class="mb-3">Flowering & Cherries</h3>
+							<h3 class="mb-3" style="color: black;">Flowering & Cherries</h3>
 							<p>Coffee plants produce fragrant white blossoms that eventually develop into coffee cherries. The transformation from flower to ripe cherry takes approximately 9 months. Each plant is carefully monitored during this crucial phase.</p>
 						</div>
 					</div>
@@ -150,10 +150,10 @@
 				<div class="col-md-4 ftco-animate">
 					<div class="services-1 text-center">
 						<span class="icon"></span>
-							<img src="images/coffee-harvest.jpg" alt="Coffee Harvest" class="img-fluid rounded-circle mb-4" style="max-width: 150px;">
+							<img src="images/lady ok.jpeg" alt="Coffee Harvest" class="img-fluid rounded-circle mb-4" style="max-width: 150px;">
 						</span>
 						<div class="desc">
-							<h3 class="mb-3">Harvest & Selection</h3>
+							<h3 class="mb-3" style="color: black;">Harvest & Selection</h3>
 							<p>Our beans are hand-picked at peak ripeness, with harvesters selecting only the perfectly ripe cherries. This labor-intensive process ensures only the finest cherries are chosen, resulting in superior coffee quality.</p>
 						</div>
 					</div>
@@ -161,10 +161,10 @@
 				<div class="col-md-4 ftco-animate">
 					<div class="services-1 text-center">
 						<span class="icon"></span>
-							<img src="images/coffee-drying.jpg" alt="Coffee Drying" class="img-fluid rounded-circle mb-4" style="max-width: 150px;">
+							<img src="images/drying too.jpeg" alt="Coffee Drying" class="img-fluid rounded-circle mb-4" style="max-width: 150px;">
 						</span>
 						<div class="desc">
-							<h3 class="mb-3">Processing & Drying</h3>
+							<h3 class="mb-3" style="color: black;">Processing & Drying</h3>
 							<p>After harvesting, cherries undergo either wet or dry processing to remove the fruit and reveal the beans. The beans are then carefully dried to achieve the optimal moisture content before being prepared for roasting.</p>
 						</div>
 					</div>
@@ -189,7 +189,7 @@
 							<div class="block-18 text-center">
 								<div class="text">
 									<div class="icon"><span class="flaticon-coffee-cup"></span></div>
-									<strong class="number" data-number="15">0</strong>
+									<strong class="number" data-number="5">0</strong>
 									<span>Years of Sustainable Farming</span>
 								</div>
 							</div>
@@ -198,7 +198,7 @@
 							<div class="block-18 text-center">
 								<div class="text">
 									<div class="icon"><span class="flaticon-coffee-bean"></span></div>
-									<strong class="number" data-number="85">0</strong>
+									<strong class="number" data-number="20">0</strong>
 									<span>Local Families Supported</span>
 								</div>
 							</div>
@@ -207,7 +207,7 @@
 							<div class="block-18 text-center">
 								<div class="text">
 									<div class="icon"><span class="flaticon-coffee"></span></div>
-									<strong class="number" data-number="250">0</strong>
+									<strong class="number" data-number="300">0</strong>
 									<span>Hectares of Protected Land</span>
 								</div>
 							</div>
@@ -287,49 +287,54 @@
 						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
 							there live the blind texts.</p>
 						<ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
-							<li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-							<li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-							<li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
+							<li class="ftco-animate"><a href="https://youtu.be/idTdtfNns1g?si=HlnC5ELhjbWe2n-h"><span
+										class="icon-youtube"></span></a></li>
+							<li class="ftco-animate"><a
+									href="https://www.linkedin.com/in/caf%C3%A9-safi-petit-kwilu-0090a8280?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><span
+										class="icon-linkedin"></span></a></li>
+							<li class="ftco-animate"><a href="https://www.facebook.com/share/1F36WfM1oJ/"><span
+										class="icon-facebook"></span></a></li>
+							<li class="ftco-animate"><a
+									href="https://www.instagram.com/cafesafipetit/profilecard/?igsh=YWpqdXRsYjhkdXZj"><span
+										class="icon-instagram"></span></a></li>
 						</ul>
 					</div>
 				</div>
 				<div class="col-lg-4 col-md-6 mb-5 mb-md-5">
 					<div class="ftco-footer-widget mb-4">
 						<h2 class="ftco-heading-2">Recent Blog</h2>
-						<div class="block-21 mb-4 d-flex">
-							<a class="blog-img mr-4" style="background-image: url(images/image_1.jpg);"></a>
-							<div class="text">
-								<h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about</a>
-								</h3>
-								<div class="meta">
-									<div><a href="#"><span class="icon-calendar"></span> Sept 15, 2018</a></div>
-									<div><a href="#"><span class="icon-person"></span> Admin</a></div>
-									<div><a href="#"><span class="icon-chat"></span> 19</a></div>
-								</div>
-							</div>
-						</div>
-						<div class="block-21 mb-4 d-flex">
-							<a class="blog-img mr-4" style="background-image: url(images/image_2.jpg);"></a>
-							<div class="text">
-								<h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about</a>
-								</h3>
-								<div class="meta">
-									<div><a href="#"><span class="icon-calendar"></span> Sept 15, 2018</a></div>
-									<div><a href="#"><span class="icon-person"></span> Admin</a></div>
-									<div><a href="#"><span class="icon-chat"></span> 19</a></div>
-								</div>
-							</div>
-						</div>
+						<!-- <div class="block-21 mb-4 d-flex">
+                <a class="blog-img mr-4" style="background-image: url(images/image_1.jpg);"></a>
+                <div class="text">
+                  <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about</a></h3>
+                  <div class="meta">
+                    <div><a href="#"><span class="icon-calendar"></span> Sept 15, 2018</a></div>
+                    <div><a href="#"><span class="icon-person"></span> Admin</a></div>
+                    <div><a href="#"><span class="icon-chat"></span> 19</a></div>
+                  </div>
+                </div>
+              </div> -->
+						<!-- <div class="block-21 mb-4 d-flex">
+                <a class="blog-img mr-4" style="background-image: url(images/image_2.jpg);"></a>
+                <div class="text">
+                  <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about</a></h3>
+                  <div class="meta">
+                    <div><a href="#"><span class="icon-calendar"></span> Sept 15, 2018</a></div>
+                    <div><a href="#"><span class="icon-person"></span> Admin</a></div>
+                    <div><a href="#"><span class="icon-chat"></span> 19</a></div>
+                  </div>
+                </div>
+              </div> -->
 					</div>
 				</div>
 				<div class="col-lg-2 col-md-6 mb-5 mb-md-5">
 					<div class="ftco-footer-widget mb-4 ml-md-4">
 						<h2 class="ftco-heading-2">Services</h2>
 						<ul class="list-unstyled">
-							<li><a href="#" class="py-2 d-block">Cooked</a></li>
-							<li><a href="#" class="py-2 d-block">Deliver</a></li>
-							<li><a href="#" class="py-2 d-block">Quality Foods</a></li>
-							<li><a href="#" class="py-2 d-block">Mixed</a></li>
+							<li><a href="#" class="py-2 d-block">Sale Coffee</a></li>
+							<li><a href="#" class="py-2 d-block">coffee bean bags</a></li>
+							<li><a href="#" class="py-2 d-block">preminum Packaging</a></li>
+							<!-- <li><a href="#" class="py-2 d-block">Mixed</a></li> -->
 						</ul>
 					</div>
 				</div>
@@ -338,12 +343,12 @@
 						<h2 class="ftco-heading-2">Have a Questions?</h2>
 						<div class="block-23 mb-3">
 							<ul>
-								<li><span class="icon icon-map-marker"></span><span class="text">203 Fake St. Mountain
-										View, San Francisco, California, USA</span></li>
-								<li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929
-											210</span></a></li>
+								<li><span class="icon icon-map-marker"></span><span class="text">115, Avenue Colonel
+										Ebeya at the intersection of Avenues du Marché</span></li>
+								<li><a href="#"><span class="icon icon-phone"></span><span
+											class="text">0977068929</span></a></li>
 								<li><a href="#"><span class="icon icon-envelope"></span><span
-											class="text">info@yourdomain.com</span></a></li>
+											class="text">safiagroup84@gmail.com</span></a></li>
 							</ul>
 						</div>
 					</div>
@@ -354,9 +359,8 @@
 
 					<p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 						Copyright &copy;
-						<script>document.write(new Date().getFullYear());</script> All rights reserved | FREELANCE
-						SOLUTIONS <i class="icon-heart" aria-hidden="true"></i>
-						<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+						<script>document.write(new Date().getFullYear());</script> All rights reserved | <i
+							class=""></i> by <a href="target=" _blank>FREELANCE SOLUTIONS</a>
 					</p>
 				</div>
 			</div>
