Add language switcher and translation functionality for various sections
- Implemented language switcher in about detail section with translations for English and French.
- Added translation data for navbar, hero section, about section, services, and footer in both languages.
- Created language switcher scripts for blog, contact, cultivation, manufacturing, menu, and services sections.
- Initialized empty translation files for each section to support future localization efforts.

--- a/menu.html
+++ b/menu.html
@@ -91,11 +91,11 @@
         <div class="container mx-auto px-2 tm-intro-width">
             <div class="sm:pb-60 sm:pt-48 py-20">
                 <div class="bg-black bg-opacity-70 p-12 mb-5 text-center">
-                    <h1 class="text-white text-5xl tm-logo-font mb-5">CAFE SAFI</h1>
-                    <p class="tm-text-gold tm-text-2xl">The coffee with the intense taste</p>
+                    <h1 class="text-white text-5xl tm-logo-font mb-5" data-translate="menu_page_title">CAFE SAFI</h1>
+                    <p class="tm-text-gold tm-text-2xl" data-translate="menu_page_subtitle">The coffee with the intense taste</p>
                 </div>
                 <div class="bg-black bg-opacity-70 p-10 mb-5">
-                    <p class="text-white leading-8 text-sm font-light">
+                    <p class="text-white leading-8 text-sm font-light" data-translate="menu_page_intro_text">
                         Forget everything you think you know about coffee. Cafe Safi isn't just a coffee shop; it's an
                         experience that awakens your senses and redefines your expectations. We bring a different level
                         of taste, a depth of flavor you've truly never encountered before. Every single sip is a journey
@@ -117,7 +117,7 @@
     <div id="menu" class="parallax-window" data-parallax="scroll" data-image-src="img/antique-cafe-bg-02.png">
         <div class="container mx-auto tm-container py-24 sm:py-48">
             <div class="text-center mb-16">
-                <h2 class="bg-white tm-text-brown py-6 px-12 text-4xl font-medium inline-block rounded-md">Coffee &
+                <h2 class="bg-white tm-text-brown py-6 px-12 text-4xl font-medium inline-block rounded-md" data-translate="menu_page_menu_title">Coffee &
                     Resto MENU
                 </h2>
             </div>
@@ -253,19 +253,19 @@
         <div class="container mx-auto tm-container pt-24 pb-48 sm:py-48">
             <div class="flex flex-col lg:flex-row justify-around items-center lg:items-stretch">
                 <div class="flex-1 rounded-xl px-10 py-12 m-5 bg-white bg-opacity-80 tm-item-container">
-                    <h2 class="text-3xl mb-6 tm-text-green">Contact Us</h2>
+                    <h2 class="text-3xl mb-6 tm-text-green" data-translate="contact_us_title">Contact Us</h2>
                     <div class="mb-6 text-lg leading-8">
-                        <strong>Our addresses:</strong><br>
+                        <strong data-translate="contact_our_addresses">Our addresses:</strong><br>
                         <ul class="list-disc pl-6">
-                            <li>115, Colonel Ebeya Avenue at the intersection of Marché Avenues.</li>
+                            <li data-translate="contact_address_1">115, Colonel Ebeya Avenue at the intersection of Marché Avenues.</li>
                             <br>
-                            <li>51, Batetela Avenue at the intersection of 30 June Boulevard.</li>
+                            <li data-translate="contact_address_2">51, Batetela Avenue at the intersection of 30 June Boulevard.</li>
                         </ul>
                     </div>
                     <p class="mb-10 text-lg">
-                        <span class="block mb-2">Tel: <a href="tel:0100200340"
+                        <span class="block mb-2"><b data-translate="contact_tel">Tel:</b> <a href="tel:0100200340"
                                 class="hover:text-yellow-600 transition">+243 977068929</a></span>
-                        <span class="block">Email: <a href="safiagroup84@gmail.com"
+                        <span class="block"><b data-translate="contact_email">Email:</b> <a href="safiagroup84@gmail.com"
                                 class="hover:text-yellow-600 transition">safiagroup84@gmail.com </a></span>
                     </p>
                     <div class="text-center">
@@ -286,15 +286,15 @@
                     <form action="" method="POST" class="text-lg">
                         <input type="text" name="name"
                             class="input w-full bg-black border-b bg-opacity-0 text-white px-0 py-4 mb-4 tm-border-gold"
-                            placeholder="Name" required="" />
+                            data-translate="contact_form_name_placeholder" placeholder="Name" required="" />
                         <input type="email" name="email"
                             class="input w-full bg-black border-b bg-opacity-0 text-white px-0 py-4 mb-4 tm-border-gold"
-                            placeholder="Email" required="" />
+                            data-translate="contact_form_email_placeholder" placeholder="Email" required="" />
                         <textarea rows="6" name="message"
                             class="input w-full bg-black border-b bg-opacity-0 text-white px-0 py-4 mb-4 tm-border-gold"
-                            placeholder="Message..." required=""></textarea>
+                            data-translate="contact_form_message_placeholder" placeholder="Message..." required=""></textarea>
                         <div class="text-right">
-                            <button type="submit" class="text-white hover:text-yellow-500 transition">Send it</button>
+                            <button type="submit" class="text-white hover:text-yellow-500 transition" data-translate="contact_form_send_button">Send it</button>
                         </div>
                     </form>
                 </div>
@@ -302,14 +302,14 @@
             <footer class="absolute bottom-0 left-0 w-full">
                 <div
                     class="text-white container mx-auto tm-container p-8 text-lg flex flex-col md:flex-row justify-between">
-                    <span>Copyright 2025 FREELANCE SOLUTIONS. All rights reserved.</span>
-                    <span class="mt-5 md:mt-0">Design: <a href="" target="_parent">FREELANCE SOLUTIONS</a></span>
+                    <span data-translate="footer_copyright_menu">Copyright 2025 FREELANCE SOLUTIONS. All rights reserved.</span>
+                    <span class="mt-5 md:mt-0" data-translate="footer_design_menu">Design: <a href="" target="_parent">FREELANCE SOLUTIONS</a></span>
                 </div>
             </footer>
         </div>
     </div>
-    <script src="js/translations.js"></script>
-    <script src="js/language_switcher.js"></script>
+    <script src="js/menu_translations.js"></script>
+    <script src="js/menu_language_switcher.js"></script>
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/parallax.min.js"></script>
     <script src="js/jquery.singlePageNav.min.js"></script>
