--- a/services.html
+++ b/services.html
@@ -33,39 +33,45 @@
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
-    <div class="container">
-      <a class="navbar-brand" href="index.html">Café SAFI<small>PETIT KWILU </small></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
-        aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="oi oi-menu"></span> Menu
-      </button>
-      <div class="collapse navbar-collapse" id="ftco-nav">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-          <li class="nav-item"><a href="menu.html" class="nav-link">Menu</a></li>
-          <li class="nav-item active"><a href="services.html" class="nav-link">Services</a></li>
-          <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
-          <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="room.html" id="dropdown04" data-toggle="dropdown"
-              aria-haspopup="true" aria-expanded="false">Info</a>
-            <div class="dropdown-menu" aria-labelledby="dropdown04">
-              <a class="dropdown-item" href="cult.html">Cultivation</a>
-              <!-- <a class="dropdown-item" href="product-single.html">Single Product</a> -->
-              <a class="dropdown-item" href="manu.html">Manufacturing</a>
-              <!-- <a class="dropdown-item" href="checkout.html">Checkout</a> -->
-            </div>
-          </li>
-          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
-          <!-- <li class="nav-item cart"><a href="cart.html" class="nav-link"><span class="icon icon-shopping_cart"></span><span class="bag d-flex justify-content-center align-items-center"><small>1</small></span></a></li> -->
-        </ul>
-        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="langDropdown">
-          <a class="dropdown-item" href="?lang=en">English</a>
-          <a class="dropdown-item" href="?lang=fr">Français</a>
-        </div>
-      </div>
-    </div>
-  </nav>
+		<div class="container">
+			<a class="navbar-brand" href="index.html">Café SAFI<small>PETIT KWILU</small></a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
+				aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="oi oi-menu"></span> Menu
+			</button>
+			<div class="collapse navbar-collapse" id="ftco-nav">
+				<ul class="navbar-nav ml-auto">
+					<li class="nav-item active"><a href="index.html" class="nav-link" data-translate="nav_home">Home</a></li>
+					<li class="nav-item"><a href="menu.html" class="nav-link" data-translate="nav_menu">Menu</a></li>
+					<li class="nav-item"><a href="services.html" class="nav-link" data-translate="nav_services">Services</a></li>
+					<li class="nav-item"><a href="blog.html" class="nav-link" data-translate="nav_blog">Blog</a></li>
+					<li class="nav-item"><a href="about.html" class="nav-link" data-translate="nav_about">About</a></li>
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="room.html" id="dropdown04" data-toggle="dropdown"
+							aria-haspopup="true" aria-expanded="false" data-translate="nav_info">Info</a>
+						<div class="dropdown-menu" aria-labelledby="dropdown04">
+							<a class="dropdown-item" href="cult.html" data-translate="nav_cultivation">Cultivation</a>
+							<!-- <a class="dropdown-item" href="product-single.html">Single Product</a> -->
+							<a class="dropdown-item" href="manu.html" data-translate="nav_manufacturing">Manufacturing</a>
+							<!-- <a class="dropdown-item" href="checkout.html">Checkout</a> -->
+						</div>
+					</li>
+					<li class="nav-item"><a href="contact.html" class="nav-link" data-translate="nav_contact">Contact</a></li>
+					<!-- <li class="nav-item cart"><a href="cart.html" class="nav-link"><span class="icon icon-shopping_cart"></span><span class="bag d-flex justify-content-center align-items-center"><small>1</small></span></a></li> -->
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="#" id="langDropdown" data-toggle="dropdown"
+							aria-haspopup="true" aria-expanded="false" data-translate="nav_language">
+							Language
+						</a>
+						<div class="dropdown-menu dropdown-menu-right" aria-labelledby="langDropdown">
+							<a class="dropdown-item" href="?lang=en" data-translate="lang_en">English</a>
+							<a class="dropdown-item" href="?lang=fr" data-translate="lang_fr">Français</a>
+						</div>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</nav>
   <!-- END nav -->
 
   <section class="home-slider owl-carousel">
@@ -76,8 +82,8 @@
         <div class="row slider-text justify-content-center align-items-center">
 
           <div class="col-md-7 col-sm-12 text-center ftco-animate">
-            <h1 class="mb-3 mt-5 bread">Services</h1>
-            <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home</a></span> <span>Services</span></p>
+            <h1 class="mb-3 mt-5 bread" data-translate="services_title">Services</h1>
+            <p class="breadcrumbs"><span class="mr-2"><a href="index.html" data-translate="breadcrumb_home">Home</a></span> <span data-translate="breadcrumb_services">Services</span></p>
           </div>
 
         </div>
@@ -94,8 +100,8 @@
               <span class="flaticon-coffee-cup"></span>
             </div>
             <div class="media-body">
-              <h3 class="heading">Specialty Coffee Beans</h3>
-              <p>At Café SAFI PETIT KWILU, we source only the finest Congolese Arabica and Robusta beans—handpicked from
+              <h3 class="heading" data-translate="service_1_title">Specialty Coffee Beans</h3>
+              <p data-translate="service_1_text">At Café SAFI PETIT KWILU, we source only the finest Congolese Arabica and Robusta beans—handpicked from
                 the fertile hills of Kwilu and Kivu. Each batch is carefully sun-dried and expertly roasted to unlock
                 deep, complex flavors. Whether you prefer bright citrus notes or smoky chocolate richness, our beans
                 deliver an unforgettable cup. Perfect for home brewers and coffee connoisseurs alike..</p>
@@ -108,8 +114,8 @@
               <span class="flaticon-coffee-bean"></span>
             </div>
             <div class="media-body">
-              <h3 class="heading"> Signature Coffee Bags</h3>
-              <p>Take the taste of Congo home with our freshly packed, airtight coffee bags—available in 250g, 500g, and
+              <h3 class="heading" data-translate="service_2_title"> Signature Coffee Bags</h3>
+              <p data-translate="service_2_text">Take the taste of Congo home with our freshly packed, airtight coffee bags—available in 250g, 500g, and
                 1kg sizes. Every bag is filled with our premium beans, ground or whole, to suit your brewing style.
                 Designed for freshness, our resealable packaging ensures your coffee stays aromatic and flavorful for
                 weeks. Ideal for gifting or your daily ritual.</p>
@@ -122,8 +128,8 @@
               <span class="flaticon-coffee-bean"></span>
             </div>
             <div class="media-body">
-              <h3 class="heading">Premium Packaging & Gifts</h3>
-              <p>Elevate your coffee experience with our elegant, reusable tins and handcrafted gift boxes, featuring
+              <h3 class="heading" data-translate="service_3_title">Premium Packaging & Gifts</h3>
+              <p data-translate="service_3_text">Elevate your coffee experience with our elegant, reusable tins and handcrafted gift boxes, featuring
                 vibrant Congolese designs. Perfect for corporate gifts, special occasions, or treating yourself to
                 something extraordinary. Each set includes our signature blend, a personalized note, and brewing tips.
                 Because great coffee deserves beautiful presentation.</p>
@@ -140,8 +146,8 @@
       <div class="row mb-5">
         <div class="col-lg-3 col-md-6 mb-5 mb-md-5">
           <div class="ftco-footer-widget mb-4">
-            <h2 class="ftco-heading-2">About Us</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
+            <h2 class="ftco-heading-2" data-translate="footer_about_us_title">About Us</h2>
+            <p data-translate="footer_about_us_text">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
               there live the blind texts.</p>
             <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
               <li class="ftco-animate"><a href="https://youtu.be/idTdtfNns1g?si=HlnC5ELhjbWe2n-h"><span
@@ -159,7 +165,7 @@
         </div>
         <div class="col-lg-4 col-md-6 mb-5 mb-md-5">
           <div class="ftco-footer-widget mb-4">
-            <h2 class="ftco-heading-2">Recent Blog</h2>
+            <h2 class="ftco-heading-2" data-translate="footer_recent_blog_title">Recent Blog</h2>
             <!-- <div class="block-21 mb-4 d-flex">
 							<a class="blog-img mr-4" style="background-image: url(images/image_1.jpg);"></a>
 							<div class="text">
@@ -188,30 +194,30 @@
         </div>
         <div class="col-lg-2 col-md-6 mb-5 mb-md-5">
           <div class="ftco-footer-widget mb-4 ml-md-4">
-            <h2 class="ftco-heading-2">Services</h2>
+            <h2 class="ftco-heading-2" data-translate="footer_services_title">Services</h2>
             <ul class="list-unstyled">
-              <li><a href="#" class="py-2 d-block">Growing Coffe Beans</a></li>
-              <li><a href="#" class="py-2 d-block">Coffer beans Manufacturing</a></li>
-              <li><a href="#" class="py-2 d-block">Coffee beans distribution</a></li>
-              <li><a href="#" class="py-2 d-block">Coffe Shops</a></li>
+              <li><a href="#" class="py-2 d-block" data-translate="footer_services_growing">Growing Coffe Beans</a></li>
+              <li><a href="#" class="py-2 d-block" data-translate="footer_services_manufacturing">Coffer beans Manufacturing</a></li>
+              <li><a href="#" class="py-2 d-block" data-translate="footer_services_distribution">Coffee beans distribution</a></li>
+              <li><a href="#" class="py-2 d-block" data-translate="footer_services_shops">Coffe Shops</a></li>
             </ul>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 mb-5 mb-md-5">
           <div class="ftco-footer-widget mb-4">
-            <h2 class="ftco-heading-2">Have a Questions?</h2>
+            <h2 class="ftco-heading-2" data-translate="footer_questions_title">Have a Questions?</h2>
             <div class="block-23 mb-3">
               <ul>
-                <li><span class="icon icon-map-marker"></span><span class="text">Nos adresses : 115,
+                <li><span class="icon icon-map-marker"></span><span class="text" data-translate="footer_address_1">Nos adresses : 115,
                     Avenue Colonel Ebeya au croisement des Avenues du Marché.
                   </span></li>
-                <li><span class="icon icon-map-marker"></span><span class="text">
+                <li><span class="icon icon-map-marker"></span><span class="text" data-translate="footer_address_2">
                     51, Avenue Batetela au croisement du boulevard du 30 juin.
                   </span></li>
-                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+243 977068929
+                <li><a href="#"><span class="icon icon-phone"></span><span class="text" data-translate="footer_phone">+243 977068929
                     </span></a></li>
                 <li><a href="safiagroup84@gmail.com"><span class="icon icon-envelope"></span><span
-                      class="text">safiagroup84@gmail.com</span></a></li>
+                      class="text" data-translate="footer_email">safiagroup84@gmail.com</span></a></li>
               </ul>
             </div>
           </div>
@@ -220,7 +226,7 @@
       <div class="row">
         <div class="col-md-12 text-center">
 
-          <p><!-- Link back to FREELANCE SOLUTION can't be removed. Template is licensed under CC BY 3.0. -->
+          <p data-translate="footer_copyright"><!-- Link back to FREELANCE SOLUTION can't be removed. Template is licensed under CC BY 3.0. -->
             Copyright &copy;
             <script>document.write(new Date().getFullYear());</script> All rights reserved |FREELANCE SOLUTIONS <i
               class="icon-heart" aria-hidden="true"></i>
@@ -240,8 +246,8 @@
         stroke="#F96D00" />
     </svg></div>
 
-  <script src="js/translations.js"></script>
-  <script src="js/language_switcher.js"></script>
+  <script src="js/services_translations.js"></script>
+  <script src="js/services_language_switcher.js"></script>
   <script src="js/jquery.min.js"></script>
   <script src="js/jquery-migrate-3.0.1.min.js"></script>
   <script src="js/popper.min.js"></script>
